css/style.css
/* All HTML element css: */

body {
  background-color: #E2FCFF;
}

hr {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

/* Class css: */

.footer {
  background-color: #3B404C;
}

.navbar {
  margin-top: 10px;
  margin-bottom: 0px;
  height : 90px;
}

.navbarItems {
  display: inline-block;
}

.nav-pills {
  padding-top: 20px;
  padding-right: 50px;
}

.question {
  font-style: italic;
  font-weight: 600;
}

.answer {
  text-indent: 30px;
}

.brand {
  float: left;
}

.core {
  margin-top: 25px;
}

.btn-success{
  margin-top: 15px;
}

.inputMethod2{
  display: none;
}

.socialLinks {
  margin-top: 5px;
}

.socialLinks:hover{
  filter: brightness(100);
}

/* Id css: */

#aboutContainer{
  padding-bottom: 15px;
  border-radius: 0px 0px 50px 50px;
  background-color: #ffb1d9;
  margin-bottom: -20px;
  z-index: 0;
}

#faqsContainer{
  padding-top: 15px;
  padding-bottom: 25px;
  border-radius: 0px 0px 50px 50px;
  background-color: #ffffff;
  z-index: -1;
}

#faceshot {
  border-radius: 50%;
  border: 2px solid;
  border-color: white;
}

#error{
  margin-top: 15px;
  display: none;
}

#canvasDiv {
  border: 5px double #000000;
  display: none;
  /*This ^ will be modified to be "display:inline" when the canvas is ready to be used!*/
}

#canvasButton {
  margin-top: 20px;
  display: none;
}

#saveButton{
  margin-left: 60px;
}

